<resources>
    <string name="app_name">W2:Do</string>

    <string name="title_activity_tab">TabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="expand_all">Expand All</string>
    <string name="collapse_all">Collapse All</string>

    <!--테스트-->
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 메인스케쥴 묻는 말 -->
    <string name="what_main_schedule">오늘의 메인 스케줄은 무엇인가요?</string>
    <string name="main_schedule_header">MAIN SCHEDULE</string>

    <!-- DetailInputActivity -->
    <string name="detailInputActivity_todo_content_edt_hint">할 일을 입력하세요.</string>
    <string name="detailInputActivity_color_picker_text">color</string>

    <!-- ) contentDescription-->
    <string name="imgbtn_contentDescription_location">위치</string>
    <string name="imgbtn_contentDescription_invite">초대</string>
    <string name="imgbtn_contentDescription_alarm">알람</string>
    <string name="imgbtn_contentDescription_memo">메모</string>

    <string name="google_map_api_key">AIzaSyBzLdW1_juTOAc5VJZigxjIUOeI4eTVUjs</string>
    <!--Task-->
    <string name="task">LockScreenTask</string>
    <string name="settings_safetylegal_activity_loading">"로드 중"</string>

    <string name="menu_download">다운로드</string>
    <string name="menu_all">전체</string>

    <string name="add_item">Add item</string>

    <string name="loading">계정을 확인합니다.</string>
    <string name="signed_out">signed_out</string>
    <string name="signed_in_fmt">LoginTest</string>
    <string name="signed_greeting_msg">반갑습니다!</string>
    <string name="signed_bye_msg">곧 다시 만나요!</string>

    <string name="nickname_msg">사용할 별명을 입력해주세요.</string>
    <string name="nickname_input">ex) james Choi </string>
    <string name="input_go">GO</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_list"> </string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>

    <string name="mainschedule">MAIN SCHEDULE</string>
    <string name="googlelogin">Google+ 로그인 </string>
    <string name="login_greeting1">\'What To Do\'에\n오신 것을 환영합니다!</string>
    <string name="frag_maininput_msg">오늘의 메인 스케줄은 무엇인가요?</string>
    <string name="mainschedule_hint">ex) lunch at 3:00pm</string>

    <string name="todayheader">TODAY</string>
    <string name="todaymsg">오늘의 할일은 무엇인가요?</string>
    <string name="todaySavebtn">SAVE</string>
    <string name="todayCancelbtn">CANCEL</string>
    <string name="invalidToday">invalid Text</string>

    <string name="submit">Submit</string>
    <string name="Error">Error</string>
    <string name="Complete">Complete</string>
    <string name="Cancel">Cancel</string>
    <string name="IndeterminateProgressSample">Indeterminate Progress Sample</string>
    <string name="IntegerProgressSample">Integer Progress Sample</string>
    <string name="StateChangeSample">State Change Sample</string>
    <string name="ProgressPaddingSample">Progress Padding Sample</string>
    <string name="CustomSelectorSample">Custom Selector Sample</string>
    <string name="doProgress">DoProgress</string>
    <string name="progress_amount">Progress completed :</string>

    <string name="colorpickertitle">Select Schedule Color</string>
    <string name="frag">datepick</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- Example General settings -->
    <string name="pref_header_general">나의 계정 관리</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">잠금화면 &amp; Push 알림 관리</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">애플리케이션 정보</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
