<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_schedule_framelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.team.codealmanac.w2do.fragment.TodoSimpleListFragment">


    <LinearLayout
        android:id="@+id/full_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/frag_todosimple_main_schedule_exist_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="29dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="@drawable/all_contents_border_layout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/frag_simpletodo_main_schedule_header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/main_schedule_header"
                android:textColor="#FFF"
                android:textSize="25dp" />

            <LinearLayout
                android:id="@+id/frag_main_schedule_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/frag_simpletodo_main_schedule_checkbox"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp"
                        android:button="@drawable/check_box_layout" />


                    <TextView
                        android:id="@+id/frag_simpletodo_main_schedule_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="7dp"
                        android:textColor="#FFF"
                        android:textSize="16dp"
                        android:text="text" />
                </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/frag_todosimple_main_schedule_input_layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="29dp"
            android:background="@drawable/all_contents_border_layout">

            <TextView
                android:id="@+id/frag_simpletodo_maininput_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/frag_maininput_msg"
                android:textColor="#FFF"
                android:textSize="17dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:weightSum="3">

                <EditText
                    android:id="@+id/frag_simpletodo_main_schedule_input"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="2"
                    android:ems="10"
                    android:hint="@string/mainschedule_hint"
                    android:inputType="textPersonName"
                    android:textColor="#e6e6e6"
                    android:textColorHint="#FFFFFFFF"
                    android:textSize="14dp" />

                <Button
                    android:id="@+id/frag_simpetodo_main_schedule_input_btn"
                    android:layout_width="49dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_go"
                    android:textColor="#FFFFFFFF" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/today_layout"
            android:layout_width="match_parent"
            android:layout_height="314dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/all_contents_border_layout"
            android:orientation="vertical">

            <TextView
                android:id="@+id/frag_simpletodo_header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="9dp"
                android:text="@string/simpleTodoHeader"
                android:textColor="#FFF"
                android:textSize="25dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/frag_simpletodo_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>